updated ResourceUtil to path